@@ -1,6 +1,7 @@
 import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class Main {
@@ -27,17 +28,20 @@ public class Main {
         numbers.stream().filter(a -> a % 5 == 0).forEach(a -> System.out.print(a + " "));
 
         System.out.println("\nGet the maximum and minimum from the list");
-        System.out.println("Maximum value "+numbers.stream().max(Comparator.naturalOrder()).get());
-        System.out.println("Minimum value "+numbers.stream().min(Comparator.naturalOrder()).get());
+        System.out.println("Maximum value " + numbers.stream().max(Comparator.naturalOrder()).get());
+        System.out.println("Minimum value " + numbers.stream().min(Comparator.naturalOrder()).get());
 
         System.out.println("Merge two unsorted arrays into one sorted array");
         List<Integer> list1 = Arrays.asList(1, 2, 3, 4, 5);
         List<Integer> list2 = Arrays.asList(6, 7, 8, 9, 10);
-        List<Integer> sortedList = Stream.concat(list1.stream(),list2.stream()).sorted().toList();
+        List<Integer> sortedList = Stream.concat(list2.stream(), list1.stream()).collect(Collectors.toList());
         System.out.println(sortedList);
 
 
-
-
+        System.out.println("Print first three minimum and maximum numbers");
+        System.out.println("Maximum");
+        numbers.stream().sorted(Comparator.reverseOrder()).limit(3).forEach(a -> System.out.print(a + " "));
+        System.out.println("\nMinimum");
+        numbers.stream().sorted().limit(3).forEach(a -> System.out.print(a + " "));
     }
 }
